Revise the wording of a few sections

--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@ title: Allmyles
 						<img src="/img/pricing_dev.png">
 					</figure>
 					<ul>
-						<li>no access to production <br> systems</li>
-						<li>no one off fee</li>
-						<li>no commitment</li>
-						<li class="cost">no cost per search</li>
+						<li>No access to production <br> systems</li>
+						<li>No one-off fee</li>
+						<li>No commitment</li>
+						<li class="cost">No cost per search</li>
 					</ul>
-					<a class="btn btn-pricing" href="#">Learn more</a>
+					<a class="btn btn-pricing" href="http://dashboard.allmyles.com/">Sign up</a>
 				</div>
 				<div class="col-md-4">
 					<h3>geek</h3>
@@ -145,12 +145,12 @@ title: Allmyles
 						<img src="/img/pricing_geek.png">
 					</figure>
 					<ul>
-						<li>no minimum daily <br> transactions</li>
-						<li>no one off fee</li>
+						<li>No minimum daily <br> transactions</li>
+						<li>No one-off fee</li>
 						<li>30 days free trial</li>
 						<li class="cost">0.09 EUR per transaction</li>
 					</ul>
-					<a class="btn btn-pricing" href="#">Continue</a>
+					<a class="btn btn-pricing" href="http://dashboard.allmyles.com/">Sign up</a>
 				</div>
 				<div class="col-md-4">
 					<h3>growth hacker</h3>
@@ -159,16 +159,16 @@ title: Allmyles
 					</figure>
 					<ul>
 						<li>1000 minimum daily <br> transactions</li>
-						<li>10000 eur one off fee</li>
+						<li>10,000 EUR one-off fee</li>
 						<li>30 days free trial</li>
 						<li class="cost">0.06 EUR per transaction</li>
 					</ul>
-					<a class="btn btn-pricing" href="#">Continue</a>
+					<a class="btn btn-pricing" href="http://dashboard.allmyles.com/">Sign up</a>
 				</div>
 			</div>
 
 			<div class="custom-package">
-				<span>Do you have 2000+ visitor per day? <a href="/contact">Contact Us!</a></span>
+				<span>Expecting 2000+ transactions per day? <a href="/contact">Contact Us!</a></span>
 			</div>
 
 		</section>
