--- a/what_we_do.html
+++ b/what_we_do.html
@@ -32,22 +32,21 @@ title: What We Do - Allmyles
 			</div>
 
 			<section id="timeline">
-				<h3>What we've archived</h3>
+				<h3>What we've achieved</h3>
 				<div class="row">
 					<div class="col-md-6">
 						<ul>
-							<li>first certified P.O.C. by Q3 2013.</li>
-							<li>location API goes live Q4 2014.</li>
-							<li>1st payment processor integrated Q2 2014</li>
-							<li>full featured continuous</li>
-							<li>integration and deployment launched Q3 2014.</li>
-							<li>self serving system architecture Q4 2014</li>
+							<li>Q3 2013: First certified proof-of-concept</li>
+							<li>Q1 2014: Location API live</li>
+							<li>Q2 2014: First integratiion of payment processor integrated</li>
+							<li>Q3 2014: Full featured continuous integration and deployment infrastructure launched</li>
+							<li>Q4 2014: Self-serving system architecture</li>
 						</ul>
 					</div>
 					<div class="col-md-6">
 						<ul>
-							<li>API 2.0 available Q4 2014</li>
-							<li>unique comfort scoring ready Q1 2015</li>
+							<li>Q4 2014: 2.0 of our API available</li>
+							<li>Q1 2015: Unique comfort scoring added to flights</li>
 							<li>Elastic cloud migration Q1 2015</li>
 							<li>Neutral billing interface ready Q2 2015</li>
 							<li>multi provider consolidator engine Q2 2015</li>
