Fix errors reported by HTML proofer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Allmyles
 			<div class="content">
 				<h1>Sell travel online</h1>
 				<span>convert your visitors into travelers</span>
-				<a class="btn btn-get-started" href="#">Get Started</a>
+				<a class="btn btn-get-started" href="http://dashboard.allmyles.com/">Get Started</a>
 			</div>
 		</div>
 	</section>
@@ -23,7 +23,7 @@ title: Allmyles
 			<div class="row">
 				<div class="col-md-4">
 					<figure>
-						<img class="img-responsive center-block" src="/img/chart_128px.png">
+						<img class="img-responsive center-block" src="/img/chart_128px.png" alt="chart">
 					</figure>
 					<div class="text">
 						<h3>Scalability</h3>
@@ -32,7 +32,7 @@ title: Allmyles
 				</div>
 				<div class="col-md-4">
 					<figure>
-						<img class="img-responsive center-block" src="/img/tools2.png">
+						<img class="img-responsive center-block" src="/img/tools2.png" alt="tools">
 					</figure>
 					<div class="text">
 						<h3>Continuous Integration</h3>
@@ -41,7 +41,7 @@ title: Allmyles
 				</div>
 				<div class="col-md-4">
 					<figure>
-						<img class="img-responsive center-block" src="/img/card_128px.png">
+						<img class="img-responsive center-block" src="/img/card_128px.png" alt="credit card">
 					</figure>
 					<div class="text">
 						<h3>Payment Clutch</h3>
@@ -58,7 +58,7 @@ title: Allmyles
 			<div class="row">
 				<div class="col-md-6">
 					<figure class="pull-right">
-						<img src="/img/cloud2.png">
+						<img src="/img/cloud2.png" alt="cloud">
 					</figure>
 				</div>
 				<div class="col-md-6">
@@ -76,7 +76,7 @@ title: Allmyles
 			<div class="row">
 				<div class="col-md-4">
 					<figure>
-						<img src="/img/book.png">
+						<img src="/img/book.png" alt="book">
 					</figure>
 					<div class="text">
 						<h3>Open RESTFul API</h3>
@@ -85,7 +85,7 @@ title: Allmyles
 				</div>
 				<div class="col-md-4">
 					<figure>
-						<img src="/img/science1.png">
+						<img src="/img/science1.png" alt="atom">
 					</figure>
 					<div class="text">
 						<h3>Multiple content in one</h3>
@@ -94,7 +94,7 @@ title: Allmyles
 				</div>
 				<div class="col-md-4">
 					<figure>
-						<img src="/img/chat.png">
+						<img src="/img/chat.png" alt="speech balloons">
 					</figure>
 					<div class="text">
 						<h3>Multi channel support</h3>
@@ -115,7 +115,7 @@ title: Allmyles
 				</div>
 				<div class="col-md-6">
 					<figure>
-						<img src="/img/lightbulb1.png">
+						<img src="/img/lightbulb1.png" alt="light bulb">
 					</figure>
 				</div>
 			</div>
@@ -129,7 +129,7 @@ title: Allmyles
 				<div class="col-md-4">
 					<h3>dev</h3>
 					<figure>
-						<img src="/img/pricing_dev.png">
+						<img src="/img/pricing_dev.png" alt="baby portrait">
 					</figure>
 					<ul>
 						<li>No access to production <br> systems</li>
@@ -142,7 +142,7 @@ title: Allmyles
 				<div class="col-md-4">
 					<h3>geek</h3>
 					<figure>
-						<img src="/img/pricing_geek.png">
+						<img src="/img/pricing_geek.png" alt="construction worker portrait">
 					</figure>
 					<ul>
 						<li>No minimum daily <br> transactions</li>
@@ -155,7 +155,7 @@ title: Allmyles
 				<div class="col-md-4">
 					<h3>growth hacker</h3>
 					<figure>
-						<img src="/img/pricing_hacker.png">
+						<img src="/img/pricing_hacker.png" alt="woman portrait">
 					</figure>
 					<ul>
 						<li>1000 minimum daily <br> transactions</li>
