--- a/why.html
+++ b/why.html
@@ -8,7 +8,7 @@ title: Why - Allmyles
 			<div class="content">
 				<h1>Selling travel <br> content</h1>
 				<span>was the privilege of legacy agents</span>
-				<a href="https://dashboard.allmyles.com/" class="btn btn-online-as-different">Online is different</a>
+				<a href="http://dashboard.allmyles.com/" class="btn btn-online-as-different">Online is different</a>
 			</div>
 		</div>
 	</div>
