correct typo - integrated

--- a/what_we_do.html
+++ b/what_we_do.html
@@ -23,7 +23,7 @@ title: What We Do - Allmyles
 
 			<p>As we believe in human creativity we work to completely release you from administrative tasks. Our ghost in the machine communicates, learns, absorbs, transforms, processes and creates a standard application programming interface. We let you easily to connect our Software as a Service (SaaS) with other machines thus creating something bigger, smarter, nicer THING.</p>
 
-			<p>Imagine the plug on the wall that consolidates quality travel content, payment processors as well as necessary industry licences for those with out of the box ideas, relevant content or popular website with purchase intent visitors and user base. The plug is ready for you, just get started!</p>
+			<p>Imagine the plug on the wall that consolidates quality travel content, payment processors as well as necessary industry licenses for those with out of the box ideas, relevant content or popular website with purchase intent visitors and user base. The plug is ready for you, just get started!</p>
 
 			<div class="quote-block">
 				<p class="text-center"><i class="fa fa-quote-left"></i></p>
@@ -38,7 +38,7 @@ title: What We Do - Allmyles
 						<ul>
 							<li>Q3 2013: First certified proof-of-concept</li>
 							<li>Q1 2014: Location API live</li>
-							<li>Q2 2014: First integratiion of payment processor integrated</li>
+							<li>Q2 2014: First integration of payment processor integrated</li>
 							<li>Q3 2014: Full featured continuous integration and deployment infrastructure launched</li>
 							<li>Q4 2014: Self-serving system architecture</li>
 						</ul>
