--- a/what_we_do.html
+++ b/what_we_do.html
@@ -39,7 +39,7 @@ title: What We Do - Allmyles
 							<li>Q3 2013: First certified proof-of-concept</li>
 							<li>Q1 2014: Location API live</li>
 							<li>Q2 2014: First production payment processor</li>
-							<li>Q3 2014: Full featured continuous integration and deployment infrastructure launched</li>
+							<li>Q3 2014: Continuous integration/deployment launched</li>
 							<li>Q4 2014: Self-serving system architecture</li>
 						</ul>
 					</div>
