correct context - comfort score

--- a/what_we_do.html
+++ b/what_we_do.html
@@ -45,10 +45,10 @@ title: What We Do - Allmyles
 					</div>
 					<div class="col-md-6">
 						<ul>
-							<li>Q4 2014: 2.0 of our API available</li>
-							<li>Q1 2015: Unique comfort scoring added to flights</li>
+							<li>Q4 2014: API 2.0 available</li>
+							<li>Q1 2015: Unique flights comfort scoring</li>
 							<li>Elastic cloud migration Q1 2015</li>
-							<li>Neutral billing interface ready Q2 2015</li>
+							<li>Neutral billing interface ready by Q2 2015</li>
 							<li>multi provider consolidator engine Q2 2015</li>
 						</ul>
 					</div>
