--- a/what_we_do.html
+++ b/what_we_do.html
@@ -47,9 +47,9 @@ title: What We Do - Allmyles
 						<ul>
 							<li>Q4 2014: API 2.0 available</li>
 							<li>Q1 2015: Unique flights comfort scoring</li>
-							<li>Elastic cloud migration Q1 2015</li>
-							<li>Neutral billing interface ready by Q2 2015</li>
-							<li>multi provider consolidator engine Q2 2015</li>
+							<li>Q1 2015: Elastic cloud migration</li>
+							<li>Q2 2015: Neutral billing interface</li>
+							<li>Q2 2015: Multi provider consolidator engine</li>
 						</ul>
 					</div>
 				</div>
