correct typo - serving

--- a/news.html
+++ b/news.html
@@ -12,7 +12,7 @@ title: News - Allmyles
 	</div>
 
 	<div class="container">
-		<p>6th December 2013 - Allmyles API starts serveing the first website in production. Allmyles API was certified by the world's 9th largest software company (<a href="http://www.forbes.com/global2000/list/#industry:Software%20%26%20Programming">Forbes</a>)</p>
+		<p>6th December 2013 - Allmyles API starts serving the first website in production. Allmyles API was certified by the world's 9th largest software company (<a href="http://www.forbes.com/global2000/list/#industry:Software%20%26%20Programming">Forbes</a>)</p>
 		<p>5th March 2013 - Allmyles Ltd was registered to revolutionize online travel industry.</p>
 	</div>
 </div>
