--- a/news.html
+++ b/news.html
@@ -12,7 +12,7 @@ title: News - Allmyles
 	</div>
 
 	<div class="container">
-		<p>23rd June 2014 - Allmyles API starts serving the second website in 17 countries. (<a href="https://www.fireflies.com/">Fireflies.com becomes the flagship product of the Swiss direct travel selling company, served by Allmyles API</a>)</p>
+		<p>23rd June 2014 - Allmyles API starts serving the second website becomes in 17 countries. (<a href="https://www.fireflies.com/">Fireflies.com becomes the flagship product of the Swiss direct travel selling company, served by Allmyles API</a>)</p>
 		<p>6th December 2013 - Allmyles API starts serving the first website in production. Allmyles API was certified by the world's 9th largest software company (<a href="http://www.forbes.com/global2000/list/#industry:Software%20%26%20Programming">Forbes</a>)</p>
 		<p>5th March 2013 - Allmyles Ltd is <a href="http://www.e-cegjegyzek.hu/">registered</a> to revolutionize online travel industry.</p>
 	</div>
