--- a/news.html
+++ b/news.html
@@ -15,7 +15,8 @@ title: News - Allmyles
 		<p>23rd June 2014 - Allmyles API starts serving the second website <a href="https://www.fireflies.com/">Fireflies.com </a>. The brand becomes available in 17 countries and creates the flagship product of the Swiss direct travel selling company called SwissHalley AG.</p>
 		<p>1st March 2014 - Allmyles Ltd <a href="https://twitter.com/allmylesconnect/status/602568480613920768">moves </a> in its first office in the city centre of Budapest - <a href="http://www.madachtrade.hu/index_en.php"> near Gozsdu Udvar</a></p>
 		<p>6th December 2013 - Allmyles API starts serving the first website in production. Allmyles API was certified by the world's 9th largest software company (<a href="http://www.forbes.com/global2000/list/#industry:Software%20%26%20Programming">Forbes</a>)</p>
-		<p>13th October 2013 - Allmyles is running its first <a href="https://twitter.com/allmylesconnect/status/602571665923547137">hackathon</a> to put together <a href="https://github.com/allmyles">Allmyles CORE </a></a> </p>
+		<p>2th December 2013 - Allmyles is running its second <a href="https://twitter.com/allmylesconnect/status/602575210756382721">hackathon</a> wher we released it! </a> </p>
+		<p>13th October 2013 - Allmyles is running its first <a href="https://twitter.com/allmylesconnect/status/602571665923547137">hackathon</a> to put together <a href="https://github.com/allmyles">Allmyles CORE </a> </p>
 		<p>5th March 2013 - Allmyles Ltd is <a href="http://www.e-cegjegyzek.hu/">registered</a> to revolutionize online travel industry.</p>
 	</div>
 </div>
