--- a/news.html
+++ b/news.html
@@ -13,6 +13,8 @@ title: News - Allmyles
 
 	<div class="container">
 		<p>1st March 2015 - Allmyles API migrates to <a href="http://aws.amazon.com/">Amazon AWS </a> (from the good old <a href="http://www.hpcloud.com/">HPCloud </a>...:-)) to jump light years and save infrastructure cost up to 50% per month.</p>
+		<p>28st February 2015 - Allmyles API migrates to <a href="https://www.cloudflare.com/">the one and only SSL, CDN and DNS provider called Cloudflare  </a> (from our former provider called <a href="https://www.godaddy.com/">GoDaddy </a> and we saved 100% of our SSL cost.</p>
+		<p>12th December 2014 - Allmyles API starts serving the third website in production. Allmyles API was certified by the world's 9th largest software company (<a href="http://www.forbes.com/global2000/list/#industry:Software%20%26%20Programming">Forbes</a>)</p>
 		<p>23rd June 2014 - Allmyles API starts serving the second website <a href="https://www.fireflies.com/">Fireflies.com </a>. The brand becomes available in 17 countries and creates the flagship product of the Swiss direct travel selling company called SwissHalley AG.</p>
 		<p>1st March 2014 - Allmyles Ltd <a href="https://twitter.com/allmylesconnect/status/602568480613920768">moves </a> in its first office in the city centre of Budapest - <a href="http://www.madachtrade.hu/index_en.php"> near Gozsdu Udvar</a></p>
 		<p>6th December 2013 - Allmyles API starts serving the first website in production. Allmyles API was certified by the world's 9th largest software company (<a href="http://www.forbes.com/global2000/list/#industry:Software%20%26%20Programming">Forbes</a>)</p>
