--- a/news.html
+++ b/news.html
@@ -12,7 +12,7 @@ title: News - Allmyles
 	</div>
 
 	<div class="container">
-		<p>22nd March 2015 - Allmyles API full refactor is done using homogenious <a href="https://www.python.org/download/releases/3.0/">Python 3.0 </a> to exceed <a href="https://www.openstack.org/"> Openstack codebase </a> thus become the leading edge technology provider in travel industry.</p>
+		<p>22nd March 2015 - Allmyles API full refactor is done using homogenious <a href="https://www.python.org/download/releases/3.0/">Python 3.0 </a> to exceed <a href="https://www.openstack.org/"> Openstack codebase </a> thus becoming the leading edge technology provider in travel industry.</p>
 		<p>1st March 2015 - Allmyles API migrates to <a href="http://aws.amazon.com/">Amazon AWS </a> (from the good old <a href="http://www.hpcloud.com/">HPCloud </a>...:-)) to jump light years and save infrastructure cost up to 50% per month.</p>
 		<p>28th February 2015 - Allmyles API migrates to <a href="https://www.cloudflare.com/">the one and only SSL, CDN and DNS provider called Cloudflare  </a> (from our former provider called <a href="https://www.godaddy.com/">GoDaddy </a> and we saved 100% of our SSL cost.</p>
 		<p>12th December 2014 - Allmyles API starts serving the third website in production. Allmyles API was certified by the world's 9th largest software company (<a href="http://www.forbes.com/global2000/list/#industry:Software%20%26%20Programming">Forbes</a>)</p>
