--- a/news.html
+++ b/news.html
@@ -12,6 +12,8 @@ title: News - Allmyles
 	</div>
 
 	<div class="container">
+		<p>29th May 2015 - Allmyles team <a href="https://twitter.com/allmylesconnect/status/604401859269398531">moves </a> in its new office still in the city centre of Budapest - <a href="https://www.google.hu/maps/@47.496471,19.057668,3a,75y,123h,90t/data=!3m4!1e1!3m2!1sg6sPAqRHLh662HFN02206w!2e0"> 
+		</a></p>
 		<p>22nd March 2015 - Allmyles API full refactor is done using homogenious <a href="https://www.python.org/download/releases/3.0/">Python 3.0 </a> to exceed <a href="https://www.openstack.org/"> Openstack codebase </a> thus becoming the leading edge technology provider in travel industry.</p>
 		<p>1st March 2015 - Allmyles API migrates to <a href="http://aws.amazon.com/">Amazon AWS </a> (from the good old <a href="http://www.hpcloud.com/">HPCloud </a>...:-)) to jump light years and save infrastructure cost up to 50% per month.</p>
 		<p>28th February 2015 - Allmyles API migrates to <a href="https://www.cloudflare.com/">the one and only SSL, CDN and DNS provider called Cloudflare  </a> (from our former provider called <a href="https://www.godaddy.com/">GoDaddy </a> and we saved 100% of our SSL cost.</p>
