remove typo in one

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ title: Allmyles
 						<img src="/img/science1.png" alt="atom">
 					</figure>
 					<div class="text">
-						<h3>Multiple content in one</h3>
+						<h3>Multiple content</h3>
 						<p>mix content as per your priorities</p>
 					</div>
 				</div>
