typo correction - restrictive

--- a/why.html
+++ b/why.html
@@ -20,7 +20,7 @@ title: Why - Allmyles
 			<h3>You get what you worked for - Immediately</h3>
 			<p>So far travel sales was restricted to travel agents in order to decrease cash flow risk for the entire value chain from the travel provider throughout intermediaries all the way long to the end-traveller.</p>
 
-			<p>We belive in a business environment wired by electronic payments where neither cost nor risk of using cash limits market entry. We started with the travel industry because it is the most complex therefore the most restricted servicing industry. Sales via internet though can be seamless. Complete removal of cash payment and clearance facilitates 100% liquidity, full solvency as well as eliminates risk and cost entireliy.</p>
+			<p>We belive in a business environment wired by electronic payments where neither cost nor risk of using cash limits market entry. We started with the travel industry because it is the most complex therefore the most restrictive servicing industry. Sales via internet though can be seamless. Complete removal of cash payment and clearance facilitates 100% liquidity, full solvency as well as eliminates risk and cost entireliy.</p>
 
 			<p>Allmyles is a cloud based SaaS aggregator of global travel content making its public RESTful API avaible to any individual, popular blogger, website owner or webshop with existing merchant activity. <a href="http://dashboard.allmyles.com">Start selling travel now</a></p>
 
