typo correction - in the 50'

--- a/what_we_do.html
+++ b/what_we_do.html
@@ -13,7 +13,7 @@ title: What We Do - Allmyles
 
 	<div class="container">
 		<div class="col-md-12">
-			<p class="summary">Since 1953, innovative travel providers have developed a semi-automated reservation system to revolutionize the industry. They did! But what happened so far?</p>
+			<p class="summary">In the 50's, innovative travel providers developed a semi-automated reservation system to revolutionize the industry. They did! But what happened so far?</p>
 
 			<h3 class="text-uppercase">The fully automated machine to machine</h3>
 
