--- a/why.html
+++ b/why.html
@@ -24,6 +24,17 @@ title: Why - Allmyles
 
 			<p>Allmyles is a cloud based SaaS aggregator of global travel content making its public RESTful API avaible to any individual, popular blogger, website owner or webshop with existing merchant activity. <a href="http://dashboard.allmyles.com">Start selling travel now</a></p>
 
+			<h3>Technical Enabler of Long-Tail Travel Merchandising</h3>
+			<p>Traditional Travel Industry is one of the most strictly regulated businesses in the world, therefore access barriers such as legal requirements, specific expertise and technical knowledge are quite high to enter the “hit” market.</p>
+
+			<p>Allmyles has deep knowledge in all the above mentioned requirements therefore able to act as a facilitator supporting anyone to start becoming merchant in online travel sector. Allmyles API delivers complex business logic including automated content consolidation, search, booking, payment collection and reconciliation between travel providers, merchants and end-travelers.</p>
+
+			<p>With its platform independent, open source RESTful web services API Allmyles is able to serve web as well as native applications from browser based websites, smartphone or tablet apps furthermore applications running on internet of things from smart watch, TV sets etc.</p>
+
+			<p>Our customer base varies from individuals willing to monetize from content publishing, event, travel or conference related websites to destination specific or thematic blogging sites, news and review sites, individual hotel websites.</p>
+
+			<p>Our customers receive a full featured API stack to seamlessly integrate global content and business logic to their existing application and start selling travel immediately. With Allmyles API popular or niche media owners can easily become online travel merchants within a few days.</p>
+			
 			<div class="quote-block">
 				<p class="text-center"><i class="fa fa-quote-left"></i></p>
 				<p class="quote-text">“Only those who attempt the absurd can achieve the impossible.”</p>
