clarification of "why"

--- a/why.html
+++ b/why.html
@@ -15,7 +15,7 @@ title: Why - Allmyles
 
 	<div class="container">
 		<div class="col-md-12">
-			<p class="summary">Cash payment makes business processes less transparent, costly and riskier than necessary. But its over now.</p>
+			<p class="summary">Cash payment makes business processes less transparent, costly and riskier than necessary. But its over now. Allmyles provides you with the technology to become an online travel merchant.</p>
 
 			<h3>Technical Enabler of Long-Tail Travel Merchandising</h3>
 			<p>Traditional Travel Industry is one of the most strictly regulated businesses in the world, therefore access barriers such as legal requirements, specific expertise and technical knowledge are quite high to enter the “hit” market.</p>
