correct context - car

--- a/why.html
+++ b/why.html
@@ -22,7 +22,7 @@ title: Why - Allmyles
 
 			<p>Allmyles has deep knowledge in all the above mentioned requirements therefore able to act as a facilitator supporting anyone to start becoming merchant in online travel sector. Allmyles API delivers complex business logic including automated content consolidation, search, booking, payment collection and reconciliation between travel providers, merchants and end-travelers.</p>
 
-			<p>With its platform independent, open source RESTful web services API Allmyles is able to serve web as well as native applications from browser based websites, smartphone or tablet apps furthermore applications running on internet of things from smart watch, TV sets etc.</p>
+			<p>With its platform independent, open source RESTful web services API Allmyles is able to serve web as well as native applications from browser based websites, smartphone or tablet apps furthermore applications running on internet of things from smart watch, TV sets or even in your car.</p>
 
 			<p>Our customer base varies from individuals willing to monetize from content publishing, event, travel or conference related websites to destination specific or thematic blogging sites, news and review sites, individual hotel websites.</p>
 
