--- a/why.html
+++ b/why.html
@@ -24,7 +24,7 @@ title: Why - Allmyles
 
 			<p>With its platform independent, open source RESTful web services API Allmyles is able to serve web as well as native applications from browser based websites, smartphone or tablet apps furthermore applications running on internet of things from smart watch, TV sets or even in your car.</p>
 
-			<p>Our customer base varies from individuals willing to monetize from content publishing, event, travel or conference related websites to destination specific or thematic blogging sites, news and review sites, individual hotel websites.</p>
+			<p>Our customer base varies from individuals willing to monetize from content publishing, event, travel or conference related websites to destination specific or thematic blogging sites, news and review sites, individual hotel websites furthermore native application providers smart devices or internet of things of any kind.</p>
 
 			<p>Our customers receive a full featured API stack to seamlessly integrate global content and business logic to their existing application and start selling travel immediately. With Allmyles API popular or niche media owners can easily become online travel merchants within a few days.</p>
 			
