Change partnerships email address

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@ title: Contact - Allmyles
 					<br>
 
 					<b>Partnerships</b><br>
-					<a href="mailto:info@allmyles.com">info@allmyles.com</a><br>
+					<a href="mailto:partnerships@allmyles.com">info@allmyles.com</a><br>
 				</div>
 			</div>
 		</div>
