Update office location

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@ title: Contact - Allmyles
 					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d86254.71287031076!2d19.055589748657237!3d47.500436498436926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1shu!2shu!4v1426258545771" frameborder="0" style="border:0"></iframe>
 				</div>
 
-				<p id="address">13-14th Madach Imre út <br> Budapest, HU-1075</p>
+				<p id="address">Károly krt 9. 1075 Budapest, Hungary</p>
 
 				<a href="tel:+36307480436">+36&nbsp;30&nbsp;748&nbsp;0436</a>
 
