Fix a typo on News page

--- a/news.html
+++ b/news.html
@@ -12,16 +12,16 @@ title: News - Allmyles
 	</div>
 
 	<div class="container">
-		<p><b>29th May 2015</b> - Allmyles team <a href="http://www.minusplus.hu/en/node/181">moves </a> in its new office still in the city centre of <a href="https://www.google.hu/maps/@47.496471,19.057668,3a,75y,123h,90t/data=!3m4!1e1!3m2!1sg6sPAqRHLh662HFN02206w!2e0"> Budapest </a></p>
-		<p><b>22nd March 2015</b> - Allmyles API full refactor is done using homogenious <a href="https://www.python.org/download/releases/3.0/">Python 3.0 </a> to exceed <a href="https://www.openstack.org/"> Openstack codebase </a> thus becoming leading edge technology provider in travel industry.</p>
-		<p><b>1st March 2015</b> - Allmyles API migrates to <a href="http://aws.amazon.com/">Amazon AWS </a> (from the good old <a href="http://www.hpcloud.com/">HPCloud </a>...:-)) to jump light years and save infrastructure cost up to 50% per month.</p>
-		<p><b>28th February 2015</b> - Allmyles API migrates to <a href="https://www.cloudflare.com/">the one and only SSL, CDN and DNS provider called Cloudflare  </a> (from our former provider called <a href="https://www.godaddy.com/">GoDaddy </a> and we saved 100% of our SSL cost.</p>
+		<p><b>29th May 2015</b> - Allmyles team <a href="http://www.minusplus.hu/en/node/181">moves</a> in its new office still in the city centre of <a href="https://www.google.hu/maps/@47.496471,19.057668,3a,75y,123h,90t/data=!3m4!1e1!3m2!1sg6sPAqRHLh662HFN02206w!2e0">Budapest</a></p>
+		<p><b>22nd March 2015</b> - Allmyles API full refactor is done using homogenious <a href="https://www.python.org/download/releases/3.0/">Python 3.0 </a> to exceed <a href="https://www.openstack.org/"> Openstack codebase</a> thus becoming leading edge technology provider in travel industry.</p>
+		<p><b>1st March 2015</b> - Allmyles API migrates to <a href="http://aws.amazon.com/">Amazon AWS</a> (from the good old <a href="http://www.hpcloud.com/">HPCloud</a>...:-)) to jump light years and save infrastructure cost up to 50% per month.</p>
+		<p><b>28th February 2015</b> - Allmyles API migrates to <a href="https://www.cloudflare.com/">the one and only SSL, CDN and DNS provider called Cloudflare</a> (from our former provider called <a href="https://www.godaddy.com/">GoDaddy </a> and we saved 100% of our SSL cost.</p>
 		<p><b>12th December 2014</b> - Allmyles API starts serving the third website in production. Allmyles API was certified by the world's 9th largest software company (<a href="http://www.forbes.com/global2000/list/#industry:Software%20%26%20Programming">Forbes</a>)</p>
-		<p><b>23rd June 2014</b> - Allmyles API starts serving the second website <a href="https://www.fireflies.com/">Fireflies.com </a>. The brand becomes available in 17 countries and creates the flagship product of the Swiss direct travel selling company called SwissHalley AG.</p>
-		<p><b>1st March 2014</b> - Allmyles Ltd <a href="https://twitter.com/allmylesconnect/status/602568480613920768">moves </a> in its first office in the city centre of Budapest - <a href="http://www.madachtrade.hu/index_en.php"> near Gozsdu Udvar</a></p>
+		<p><b>23rd June 2014</b> - Allmyles API starts serving the second website <a href="https://www.fireflies.com/">Fireflies.com</a>. The brand becomes available in 17 countries and creates the flagship product of the Swiss direct travel selling company called SwissHalley AG.</p>
+		<p><b>1st March 2014</b> - Allmyles Ltd <a href="https://twitter.com/allmylesconnect/status/602568480613920768">moves</a> in its first office in the city centre of Budapest - <a href="http://www.madachtrade.hu/index_en.php"> near Gozsdu Udvar</a></p>
 		<p><b>6th December 2013</b> - Allmyles API starts serving the first website in production. Allmyles API was certified by the world's 9th largest software company (<a href="http://www.forbes.com/global2000/list/#industry:Software%20%26%20Programming">Forbes</a>)</p>
-		<p><b>2nd December 2013</b> - Allmyles is running its second <a href="https://twitter.com/allmylesconnect/status/602575210756382721">hackathon</a> wher we released it! </a> </p>
-		<p><b>13th October 2013</b> - Allmyles is running its first <a href="https://twitter.com/allmylesconnect/status/602571665923547137">hackathon</a> to put together <a href="https://github.com/allmyles">Allmyles CORE </a> </p>
+		<p><b>2nd December 2013</b> - Allmyles is running its second <a href="https://twitter.com/allmylesconnect/status/602575210756382721">hackathon</a> where we released it!</a> </p>
+		<p><b>13th October 2013</b> - Allmyles is running its first <a href="https://twitter.com/allmylesconnect/status/602571665923547137">hackathon</a> to put together <a href="https://github.com/allmyles">Allmyles CORE</a> </p>
 		<p><b>5th March 2013</b> - Allmyles Ltd is <a href="http://www.e-cegjegyzek.hu/">registered</a> to revolutionize online travel industry.</p>
 	</div>
 </div>
