--- a/how.html
+++ b/how.html
@@ -4,7 +4,7 @@ title: How - Allmyles
 ---
 
 <div class="page page-how">
-	<section id="featured-image-wwd" class="featured-image">
+	<div id="featured-image-news" class="featured-image">
 		<div class="inner">
 			<div class="content">
 				<h1>How</h1>
