code correction section

--- a/how.html
+++ b/how.html
@@ -10,7 +10,7 @@ title: How - Allmyles
 				<h1>How</h1>
 			</div>
 		</div>
-	</section>
+	</div>
 
 	<div class="container">
 		<div class="col-md-12">
