typo correction - you

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: Allmyles
 	<div class="container">
 		<section id="prewelcome" class="page-section">
 			<h2 class="text-uppercase">Imagine the easiest bookable content integrated...</h2>
-			<p class="text-uppercase">…with your website, holding your brand yielding for your</p>
+			<p class="text-uppercase">…with your website, holding your brand yielding for you</p>
 			<p>the very first full featured SaaS RESTful API consolidator of global bookable travel content with online clearance clutch</p>
 		</section>
 		<section id="welcome" class="page-section">
