--- a/news.html
+++ b/news.html
@@ -12,7 +12,7 @@ title: News - Allmyles
 	</div>
 
 	<div class="container">
-		<p><b>09th June 2015</b> - Allmyles API rolls out multiple city search similar to <a href="https://matrix.itasoftware.com">ITA Matrix</a> owned by <a href="https://www.itasoftware.com"> Google</a> , but Allmyles goes further and lets you book, pay and ticket those results. See our <a href="https://docs.allmyles.com">RESTful API documentation for more information.</a></p>
+		<p><b>09th June 2015</b> - Allmyles API rolls out multiple city search similar to <a href="https://matrix.itasoftware.com">ITA Matrix</a> owned by <a href="https://www.itasoftware.com"> Google</a>, but Allmyles goes further and lets you book, pay and ticket those results. See our <a href="https://docs.allmyles.com">RESTful API documentation</a> for more information.</p>
 		<p><b>29th May 2015</b> - Allmyles team <a href="http://www.minusplus.hu/en/node/181">moves</a> in its new office still in the city centre of <a href="https://www.google.hu/maps/@47.496471,19.057668,3a,75y,123h,90t/data=!3m4!1e1!3m2!1sg6sPAqRHLh662HFN02206w!2e0">Budapest</a></p>
 		<p><b>22nd March 2015</b> - Allmyles API full refactor is done using homogenious <a href="https://www.python.org/download/releases/3.0/">Python 3.0 </a> to exceed <a href="https://www.openstack.org/"> Openstack codebase</a> thus becoming leading edge technology provider in travel industry.</p>
 		<p><b>1st March 2015</b> - Allmyles API migrates to <a href="http://aws.amazon.com/">Amazon AWS</a> (from the good old <a href="http://www.hpcloud.com/">HPCloud</a>...:-)) to jump light years and save infrastructure cost up to 50% per month.</p>
