Remove pull-right class from cloud image

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ title: Allmyles
 			</header>
 			<div class="row">
 				<div class="col-md-6">
-					<figure class="pull-right">
+					<figure>
 						<img src="/img/cloud2.png" alt="cloud">
 					</figure>
 				</div>
