Clean up project structure

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: base
 title: Allmyles
 ---
+
 <div class="page page-frontpage">
   <section id="featured-image-frontpage" class="page-section featured-image">
     <div class="inner">
@@ -14,16 +15,16 @@ title: Allmyles
   </section>
 
   <div class="container">
-    <section id="prewelcome" class="page-section">
+    <section id="hello" class="page-section">
       <h2 class="text-uppercase">Imagine the easiest bookable content integrated...</h2>
       <p class="text-uppercase">…with your website, holding your brand yielding for you</p>
       <p>the very first full featured SaaS RESTful API consolidator of global bookable travel content with online clearance clutch</p>
     </section>
-    <section id="welcome" class="page-section">
+    <section id="about-us" class="page-section">
       <div class="row">
         <div class="col-md-4">
           <figure>
-            <img class="img-responsive center-block" src="/img/chart_128px.png" alt="chart">
+            <img class="img-responsive center-block" src="/img/frontpage/chart.png" alt="chart">
           </figure>
           <div class="text">
             <h3>Scalability</h3>
@@ -32,7 +33,7 @@ title: Allmyles
         </div>
         <div class="col-md-4">
           <figure>
-            <img class="img-responsive center-block" src="/img/tools2.png" alt="tools">
+            <img class="img-responsive center-block" src="/img/frontpage/tools.png" alt="tools">
           </figure>
           <div class="text">
             <h3>Continuous Integration</h3>
@@ -41,7 +42,7 @@ title: Allmyles
         </div>
         <div class="col-md-4">
           <figure>
-            <img class="img-responsive center-block" src="/img/card_128px.png" alt="credit card">
+            <img class="img-responsive center-block" src="/img/frontpage/card.png" alt="credit card">
           </figure>
           <div class="text">
             <h3>Payment Clutch</h3>
@@ -51,14 +52,14 @@ title: Allmyles
       </div>
     </section>
 
-    <section id="text-section-1" class="page-section">
+    <section id="without-restrictions" class="page-section">
       <header>
         <h2>Seamless access without restrictions</h2>
       </header>
       <div class="row">
         <div class="col-md-6">
           <figure>
-            <img src="/img/cloud2.png" alt="cloud">
+            <img src="/img/frontpage/cloud.png" alt="cloud">
           </figure>
         </div>
         <div class="col-md-6">
@@ -69,14 +70,14 @@ title: Allmyles
       </div>
     </section>
 
-    <section id="text-section-2" class="page-section">
+    <section id="content-integration" class="page-section">
       <header>
         <h2>The easiest travel content integration ever</h2>
       </header>
       <div class="row">
         <div class="col-md-4">
           <figure>
-            <img src="/img/book.png" alt="book">
+            <img src="/img/frontpage/book.png" alt="book">
           </figure>
           <div class="text">
             <h3>Open RESTFul API</h3>
@@ -85,7 +86,7 @@ title: Allmyles
         </div>
         <div class="col-md-4">
           <figure>
-            <img src="/img/science1.png" alt="atom">
+            <img src="/img/frontpage/science.png" alt="atom">
           </figure>
           <div class="text">
             <h3>Multiple content</h3>
@@ -94,7 +95,7 @@ title: Allmyles
         </div>
         <div class="col-md-4">
           <figure>
-            <img src="/img/chat.png" alt="speech balloons">
+            <img src="/img/frontpage/chat.png" alt="speech balloons">
           </figure>
           <div class="text">
             <h3>Multi channel support</h3>
@@ -104,7 +105,7 @@ title: Allmyles
       </div>
     </section>
 
-    <section id="text-section-3" class="page-section">
+    <section id="use-it" class="page-section">
       <header>
         <h2>Just plug it and let visitors explore</h2>
       </header>
@@ -115,7 +116,7 @@ title: Allmyles
         </div>
         <div class="col-md-6">
           <figure>
-            <img src="/img/lightbulb1.png" alt="light bulb">
+            <img src="/img/frontpage/lightbulb.png" alt="light bulb">
           </figure>
         </div>
       </div>
@@ -129,7 +130,7 @@ title: Allmyles
         <div class="col-md-4">
           <h3>dev</h3>
           <figure>
-            <img src="/img/pricing_dev.png" alt="baby portrait">
+            <img src="/img/frontpage/pricing/dev.png" alt="baby portrait">
           </figure>
           <ul>
             <li>No access to production <br> systems</li>
@@ -142,7 +143,7 @@ title: Allmyles
         <div class="col-md-4">
           <h3>geek</h3>
           <figure>
-            <img src="/img/pricing_geek.png" alt="construction worker portrait">
+            <img src="/img/frontpage/pricing/geek.png" alt="construction worker portrait">
           </figure>
           <ul>
             <li>No minimum daily <br> transactions</li>
@@ -155,7 +156,7 @@ title: Allmyles
         <div class="col-md-4">
           <h3>growth hacker</h3>
           <figure>
-            <img src="/img/pricing_hacker.png" alt="woman portrait">
+            <img src="/img/frontpage/pricing/hacker.png" alt="woman portrait">
           </figure>
           <ul>
             <li>1000 minimum daily <br> transactions</li>
