--- a/what_we_do.html
+++ b/what_we_do.html
@@ -2,6 +2,7 @@
 layout: base
 title: What We Do - Allmyles
 ---
+
 <div class="page page-what_we_do">
   <section id="featured-image-wwd" class="featured-image">
     <div class="inner">
@@ -31,7 +32,7 @@ title: What We Do - Allmyles
         <p class="quote-by"><small>— Henry Ford</small></p>
       </div>
 
-      <section id="timeline">
+      <section class="timeline">
         <h3>What we've achieved</h3>
         <div class="row">
           <div class="col-md-6">
