--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 layout: base
 title: Contact - Allmyles
 ---
+
 <div class="page page-contact">
   <section id="featured-image-contact" class="featured-image">
     <div class="inner">
@@ -14,26 +15,29 @@ title: Contact - Allmyles
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h3>Call or visit</h3>
-
-        <div id="map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d86254.71287031076!2d19.055589748657237!3d47.500436498436926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1shu!2shu!4v1426258545771" frameborder="0" style="border:0"></iframe>
+        <div class="office">
+          <header>
+            <h3>Office</h3>
+          </header>
+          <div class="map">
+              <object class="map-object" type="text/html" data="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2695.664549336033!2d19.057752200000003!3d47.4964479!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4741dc42236c2cb5%3A0x7c5bb6e9bd688294!2sK9!5e0!3m2!1shu!2shu!4v1435917489162"></object>
+          </div>
+          <span class="address-text">Károly krt 9. 1075 Budapest, Hungary</span>
+          <span class="phone">Phone: <a href="tel:+36307480436">+36&nbsp;30&nbsp;748&nbsp;0436</a></span>
         </div>
 
-        <p id="address">Károly krt 9. 1075 Budapest, Hungary</p>
-
-        <a href="tel:+36307480436">+36&nbsp;30&nbsp;748&nbsp;0436</a>
-
         <div class="email">
-          <h3>Email</h3>
-
-          <b>General Inquiries</b><br>
-          <a href="mailto:info@allmyles.com">info@allmyles.com</a><br>
-
-          <br>
-
-          <b>Partnerships</b><br>
-          <a href="mailto:partnership@allmyles.com">partnership@allmyles.com</a><br>
+          <header>
+            <h3>Email</h3>
+          </header>
+          <div class="email-address">
+              <h4>General Inquiries</h4>
+              <a href="mailto:info@allmyles.com">info@allmyles.com</a>
+          </div>
+          <div class="email-address">
+            <h4>Partnerships</h4>
+            <a href="mailto:partnership@allmyles.com">partnership@allmyles.com</a>
+          </div>
         </div>
       </div>
     </div>
