--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ title: Allmyles
           <ul>
             <li>No minimum daily <br> transactions</li>
             <li>No one-off fee</li>
-            <li>30 days free trial</li>
+            <li>24 hour support</li>
             <li class="cost">0.09 EUR per transaction</li>
           </ul>
           <a class="btn btn-pricing" href="http://dashboard.allmyles.com/">Sign up</a>
@@ -161,7 +161,7 @@ title: Allmyles
           <ul>
             <li>1000 minimum daily <br> transactions</li>
             <li>10,000 EUR one-off fee</li>
-            <li>30 days free trial</li>
+            <li>24 hour support</li>
             <li class="cost">0.06 EUR per transaction</li>
           </ul>
           <a class="btn btn-pricing" href="http://dashboard.allmyles.com/">Sign up</a>
