--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@ title: Allmyles
             <li>No one-off fee</li>
             <li>24 hour support</li>
             <li class="cost">0.09 EUR per transaction</li>
+            <li>just have fun</li>
           </ul>
           <a class="btn btn-pricing" href="http://dashboard.allmyles.com/">Sign up</a>
         </div>
