--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@ title: Allmyles
             <li>No one-off fee</li>
             <li>No commitment</li>
             <li class="cost">No cost per search</li>
+            <li>just have fun</li>
           </ul>
           <a class="btn btn-pricing" href="http://dashboard.allmyles.com/">Sign up</a>
         </div>
@@ -164,6 +165,7 @@ title: Allmyles
             <li>10,000 EUR one-off fee</li>
             <li>24 hour support</li>
             <li class="cost">0.06 EUR per transaction</li>
+            <li>just have fun</li>
           </ul>
           <a class="btn btn-pricing" href="http://dashboard.allmyles.com/">Sign up</a>
         </div>
