--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ title: Allmyles
           <ul>
             <li>No minimum daily <br> transactions</li>
             <li>No one-off fee</li>
-            <li>24 hour support</li>
+            <li>* fulfilment support</li>
             <li class="cost">0.09 EUR per transaction</li>
           </ul>
           <a class="btn btn-pricing" href="http://dashboard.allmyles.com/">Sign up</a>
@@ -161,13 +161,15 @@ title: Allmyles
           <ul>
             <li>1000 minimum daily <br> transactions</li>
             <li>10,000 EUR one-off fee</li>
-            <li>24 hour support</li>
+            <li>* fulfilment support</li>
             <li class="cost">0.06 EUR per transaction</li>
           </ul>
           <a class="btn btn-pricing" href="http://dashboard.allmyles.com/">Sign up</a>
         </div>
       </div>
-
+      <div class="custom-package">
+        <span>* Fulfilment support for additional 500 transactions per day includes post booking manual interventions such as void, refund, ticket exchange after successful ticketing <a href="/contact">Contact Us!</a></span>
+      </div>
       <div class="custom-package">
         <span>Expecting 2000+ transactions per day? <a href="/contact">Contact Us!</a></span>
       </div>
