--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@ title: Allmyles
             <img src="/img/frontpage/pricing/dev.png" alt="baby portrait">
           </figure>
           <ul>
-            <li>No access to production <br> systems</li>
+            <li>Access to staging <br> systems</li>
+            <li>Beta testing avalable <br> upfront</li>
             <li>No one-off fee</li>
             <li>No commitment</li>
             <li class="cost">No cost per search</li>
@@ -147,8 +148,9 @@ title: Allmyles
           </figure>
           <ul>
             <li>No minimum daily <br> transactions</li>
-            <li>No one-off fee</li>
-            <li>* fulfilment support</li>
+            <li>Pamyent Service Provider <br> agnostic</li>
+            <li>Purchase transactions from top up account</li>
+            <li>* optional fulfilment support</li>
             <li class="cost">0.09 EUR per transaction</li>
           </ul>
           <a class="btn btn-pricing" href="http://dashboard.allmyles.com/">Sign up</a>
@@ -161,7 +163,8 @@ title: Allmyles
           <ul>
             <li>1000 minimum daily <br> transactions</li>
             <li>10,000 EUR one-off fee</li>
-            <li>* fulfilment support</li>
+            <li>Barion e-wallet payment available <br> no top up account needed</li>
+            <li>* optional fulfilment support</li>
             <li class="cost">0.06 EUR per transaction</li>
           </ul>
           <a class="btn btn-pricing" href="http://dashboard.allmyles.com/">Sign up</a>
