--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ title: Allmyles
           </figure>
           <ul>
             <li>Access to staging <br> systems</li>
-            <li>Beta testing avalable <br> upfront</li>
+            <li>Beta testing avialable <br> upfront</li>
             <li>No one-off fee</li>
             <li>No commitment</li>
             <li class="cost">No cost per search</li>
