raise one off fee at geek tier

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ title: Allmyles
           <ul>
             <li>No minimum daily <br> transactions</li>
             <li>Pamyent Service Provider <br> agnostic</li>
-            <li>Purchase transactions from top up account</li>
+            <li>1,000 EUR one-off fee</li>
             <li>* optional fulfilment support</li>
             <li class="cost">0.09 EUR per transaction</li>
           </ul>
