--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ title: Allmyles
           </figure>
           <ul>
             <li>1000 minimum daily <br> transactions</li>
-            <li><a href="https://www.barion.com/">Barion</a> e-wallet payment available <br> no top up account needed</li>
+            <li>50% of one-off fee used for first top-up</li>
             <li>10,000 EUR one-off fee</li>
             <li>* optional fulfilment support</li>
             <li class="cost">0.06 EUR per transaction</li>
