--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ title: Allmyles
         </div>
       </div>
       <div class="custom-package">
-        <span>* Fulfilment support for additional 500 transactions per day includes post booking manual interventions such as void, refund, ticket exchange after successful ticketing <a href="/contact">Contact Us!</a></span>
+        <span>* Fulfilment support for additional 500 search transactions per voluntary change<a href="/contact">Contact Us!</a></span>
       </div>
       <div class="custom-package">
         <span>Expecting 2000+ transactions per day? <a href="/contact">Contact Us!</a></span>
