--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ title: Allmyles
             <img src="/img/frontpage/pricing/geek.png" alt="construction worker portrait">
           </figure>
           <ul>
-            <li>No minimum daily <br> transactions</li>
+            <li>No commitment</li>
             <li>Pamyent Service Provider <br> agnostic</li>
             <li>1,000 EUR one-off fee</li>
             <li>* optional fulfilment support</li>
@@ -162,7 +162,7 @@ title: Allmyles
           </figure>
           <ul>
             <li>1000 minimum daily <br> transactions</li>
-            <li>50% of one-off fee used for first top-up</li>
+            <li>20% of one-off fee used for first top-up</li>
             <li>10,000 EUR one-off fee</li>
             <li>* optional fulfilment support</li>
             <li class="cost">0.06 EUR per transaction</li>
