--- a/tos.html
+++ b/tos.html
@@ -92,13 +92,13 @@ title: Terms of Services - Allmyles
     <p>Any rights not expressly granted herein are reserved.</p>
     <p>Compulsory information related to Allmyles Ltd:</p>
     Name: <b>Allmyles Kft.</b><br>
-    Registered seat: <b>9 Karoly krt H-1075 Budapest, Hungary</b>
+    Registered seat: <b>5. Karoly krt H-1075 Budapest, Hungary</b>
     Legal form: Allmyles Kft. is a limited liability company registered by the County Court of Budapest as company registry<br> court under company registration number 01-09-186975 pursuant to the legal rules of Hungary<br>
     <p>Tax number: 24273279-2-42.</p>
     E-mail: <a href="mailto:info@allmyles.com">info@allmyles.com</a>
     <p>Phone: +36304938089</p>
     <p><b>Last updated:
-    01. 07. 2015</b></p>
+    01. 10. 2016</b></p>
     <b>AllMyles Ltd.</b>
   </div>
 </div>
