--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@ title: Allmyles
           </figure>
           <ul>
             <li>No commitment</li>
-            <li>Pamyent Service Provider <br> agnostic</li>
-            <li>1,000 EUR one-off fee</li>
+            <li>5,000 EUR one-off fee</li>
+            <li>1,000 EUR of one-off fee used for first top-up</li>
             <li>* optional fulfilment support</li>
             <li class="cost">0.09 EUR per transaction</li>
           </ul>
@@ -161,8 +161,8 @@ title: Allmyles
           </figure>
           <ul>
             <li>1500 minimum daily <br> transactions</li>
-            <li>20% of one-off fee used for first top-up</li>
             <li>10,000 EUR one-off fee</li>
+            <li>2,000 EUR of one-off fee used for first top-up</li>
             <li>* optional fulfilment support</li>
             <li class="cost">0.06 EUR per transaction</li>
           </ul>
