--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ title: Allmyles
             <li>5,000 EUR one-off fee</li>
             <li>1,000 EUR of one-off fee used for first top-up</li>
             <li>* optional fulfilment support</li>
-            <li class="cost">0.09 EUR per transaction</li>
+            <li class="cost">0.09 EUR per search</li>
           </ul>
           <a class="btn btn-pricing" href="http://dashboard.allmyles.com/">Sign up</a>
         </div>
@@ -160,11 +160,11 @@ title: Allmyles
             <img src="/img/frontpage/pricing/hacker.png" alt="woman portrait">
           </figure>
           <ul>
-            <li>1500 minimum daily <br> transactions</li>
+            <li>1500 minimum daily search</li>
             <li>10,000 EUR one-off fee</li>
             <li>2,000 EUR of one-off fee used for first top-up</li>
             <li>* optional fulfilment support</li>
-            <li class="cost">0.06 EUR per transaction</li>
+            <li class="cost">0.06 EUR per search</li>
           </ul>
           <a class="btn btn-pricing" href="http://dashboard.allmyles.com/">Sign up</a>
         </div>
