--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@ title: Contact - Allmyles
             <h3>Office</h3>
           </header>
           <div class="map">
-              <object class="map-object" type="text/html" data="<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJRQuLR0LcQUcRS4mqV8eLw6c&key=AIzaSyCh1IFlF5pSBbu7NjNWCvvQYwm7mk3jIfw" allowfullscreen></iframe>"></object>
+              <object class="map-object" type="text/html" data="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2695.664549336033!2d19.057752200000003!3d47.4964479!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4741dc42236c2cb5%3A0x7c5bb6e9bd688294!2sK9!5e0!3m2!1shu!2shu!4v1435917489162"></object>
           </div>
           <span class="address-text">Károly krt 5. 1075 Budapest, Hungary</span>
           <span class="phone">Phone: <a href="tel:+36307480436">+36&nbsp;30&nbsp;748&nbsp;0436</a></span>
